# gripper

./: gripper_test.py  load_ur5e.launch  notes.txt  ros_impedance_controller_ur5.launch  ur5.xacro
gripper_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
gripper_controller/config/: gripper_controller.yaml
gripper_controller/include/gripper_controller/: gripper_controller.h  gripper_controller_old.h
gripper_controller/launch/: gripper_controller.launch  gripper_controller_test.launch
gripper_controller/scripts/: gripper_close.py  gripper_open.py  onrobot.script  socket_testing.py
gripper_controller/src/: gripper_controller.cpp  gripper_controller_old.cpp
gripper_controller/srv/: gripper_close.srv  gripper_open.srv
gripper_controller/worlds/: empty.world
gripper_description/: CMakeLists.txt
gripper_description/urdf/: finger.urdf  gripper.urdf  gripper.xacro
