<?xml version="1.0"?>
<package format="2">
  <name>gripper_controller</name>
  <version>1.2.5</version>
  <description>The gripper controller package</description>

  <author>Simone Brentan</author>
  <maintainer email="simobrentan@gmail.com">Simone Brentan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>controller_interface</depend>
  <export>
    <controller_interface plugin="${prefix}/controller_plugin.xml"/>
  </export>
  <test_depend>roslaunch</test_depend>
</package>
